--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -2,6 +2,7 @@
     {% block content %}
         {% for post in posts %}
             <h1>{{ post.title}}</h1>
+            <img class='rounded-circle article-img' src='{{ post.author.profile.image.url }}'>
 		    <p>By {{ post.author }} on {{ post.date_posted | date:"F d, Y" }}</p>
 		    <p>{{ post.content }}</p>
 	    {% endfor %}
