--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -1,8 +1,8 @@
 {% extends 'blog/base.html' %}
     {% block content %}
+        <h1 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
         {% for post in posts %}
             <h1> <a href="{% url 'post-detail' post.pk %}" >{{ post.title}}</a></h1>
-			 <a class='mr-2' href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
             <img class='rounded-circle article-img' src='{{ post.author.profile.image.url }}'>
 		    <p>By {{ post.author }} on {{ post.date_posted | date:"F d, Y" }}</p>
 		    <p>{{ post.content }}</p>
